[package]
name = "openslide-rs"
edition = "2024"
version = "2.3.0"
authors = ["AzHicham <hicham.azimani1@gmail.com>"]
description = "Rust bindings of OpenSlide C library"
repository = "https://github.com/AzHicham/openslide-rs"
homepage = "https://github.com/AzHicham/openslide-rs"
readme = "README.md"
keywords = ["openslide", "histopathology", "microscopy"]
categories = ["science"]
license = "MIT/Apache-2.0"
rust-version = "1.87.0"

[features]
default = ["deepzoom"]
deepzoom = ["image"]
image = ["dep:image", "dep:fast_image_resize"]
openslide4 = []

[dependencies]
thiserror = "2"
regex = "1"
lazy_static = "1"
openslide-sys = { version = "1" }
image = { version = "0.25", optional = true, default-features = false}
fast_image_resize = { version = "5", features = ["image"], optional = true}

[dev-dependencies]
rstest = "0.26"
assert_approx_eq = "1"
bencher = "0.1"
version-compare = "0.2"

[[bench]]
name = "bench_read"
harness = false
