[package]
name = "openslide-rs"
edition = "2024"
version = "2.4.0"
authors = ["AzHicham <hicham.azimani1@gmail.com>"]
description = "Rust bindings of OpenSlide C library"
repository = "https://github.com/AzHicham/openslide-rs"
homepage = "https://github.com/AzHicham/openslide-rs"
readme = "README.md"
keywords = ["openslide", "histopathology", "microscopy"]
categories = ["science"]
license = "MIT/Apache-2.0"
rust-version = "1.87.0"

[features]
default = ["deepzoom"]
deepzoom = ["image"]
image = ["dep:image", "dep:fast_image_resize"]
openslide4 = []

[dependencies]
[dependencies.thiserror]
version = "2"
default-features = false
features = []

[dependencies.regex]
version = "1"
default-features = false
features = []

[dependencies.lazy_static]
version = "1"
default-features = false
features = []

[dependencies.openslide-sys]
version = "1"
default-features = false
features = []

[dependencies.image]
version = "0.25"
default-features = false
features = []
optional = true

[dependencies.fast_image_resize]
version = "5"
default-features = false
features = ["image"]
optional = true

[dev-dependencies]
[dev-dependencies.rstest]
version = "0.26"
default-features = false
features = []

[dev-dependencies.assert_approx_eq]
version = "1"
default-features = false
features = []

[dev-dependencies.version-compare]
version = "0.2"
default-features = false
features = []

[dev-dependencies.bencher]
version = "0.1"
default-features = false
features = []


[[bench]]
name = "bench_read"
harness = false
